[package]
name = "async-pbft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomicwrites = "0.2"
clap = "2.31"
hex = "0.3"
itertools = "0.7"
rl-logger = { path = "../logger/rl_logger" }
openssl = "0.10"
protobuf = "2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_millis = "0.1"
types = {version = "0.1.0", path = "../types"}
common-trait = {version = "0.1.0", path = "../common-trait"}
crypto = {version = "0.1.0", path = "../crypto"}
rand = { version = "0.8", features = ["getrandom"]}
zmq = "0.9"
uuid = { version = "0.8", features = ["v4"] }
libc = "0.2"
ctrlc = { version = "3.0", features = ["termination"] }
tokio = { version="1.0", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
bcs = "0.1.3"
async-trait = "0.1.36"
anyhow = "1.0.32"
