[package]
name = "async-raft"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.36"
bytes = "1.0"
derive_more = { version="0.99.9", default-features=false, features=["from"] }
futures = "0.3"
log = "0.4"
rand = "0.7"
serde = { version="1", features=["derive"] }
thiserror = "1.0.20"
tokio = { version="1.0", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2.4"
common-trait={version = "0.1.0", path = "../common-trait"}
types = {version = "0.1.0", path = "../types"}
chrono = "0.4"
regex = "0.1"
time = "0.1.41"
date_time = "2.1.1"
bcs = "0.1.3"
memstore = { version="0.1.0", path="../memstore" }
rl-logger = { path = "../logger/rl_logger" }

[dev-dependencies]
maplit = "1.0.2"

tracing-subscriber = "0.2.10"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
