[package]
name = "memstore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.36"
async-raft = {version = "0.1.0", path = "../async-raft"}
common-trait = {version = "0.1.0", path = "../common-trait"}
serde = { version="1.0.114", features=["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio = { version="1.0", default-features=false, features=["sync"] }
tracing = "0.1.17"
tracing-futures = "0.2.4"
types = {version = "0.1.0", path = "../types"}
[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
