[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = {version = "0.1.0", path = "../types"}
async-raft = {version = "0.1.0", path = "../async-raft"}
common-trait = {version = "0.1.0", path = "../common-trait"}
anyhow = "1.0.32"
memstore = { version="0.1.0", path="../memstore" }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2.4"
serde = { version="1.0.114", features=["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
async-trait = "0.1.36"
tracing-subscriber = "0.2.10"
bcs = "0.1.3"
rl-logger = { path = "../logger/rl_logger" }
futures = "0.3"
