[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features=["derive"] }
tokio = { version="1.0", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1.36"
anyhow = "1.0.32"
thiserror = "1.0.20"
