[package]
name = "rl-logger"
version = "0.1.0"
authors = ["rl Association <opensource@rl.com>"]
description = "rl rl-logger"
repository = "https://github.com/rl/rl"
homepage = "https://rl.com"
license = "Apache-2.0"
publish = false
edition = "2018"

# Do NOT add any inter-project dependencies.
# This is to avoid ever having a circular dependency with the rl-logger crate.
[dependencies]
backtrace = { version = "0.3", features = ["serde"] }
chrono = "0.4.19"
erased-serde = "0.3.13"
hostname = "0.3.1"
rl-log-derive = { path = "../rl-log-derive" }
rl-infallible = { path = "../rl-infallible" }
serde = { version = "1.0.130", features = ["alloc", "derive", "rc", "serde_derive", "std"] }
serde_json = { version = "1.0.73", features = ["indexmap", "preserve_order", "std"] }
once_cell = "1.7.2"
prometheus = { version = "0.12.0", default-features = false }
tracing = "0.1.26"
tracing-subscriber = "0.3"
